@@ -231,7 +231,7 @@ Most properties (actions, filters) are described above.
 
   :param action: the default action for match in the zone; typically you want ``policy.DENY``
   :param path: path to zone file | database
-  :param watch: boolean, if true the file will be reparsed and the ruleset reloaded on file change
+  :param watch: boolean, if not false, the file will be reparsed and the ruleset reloaded on file change
 
   Enforce RPZ_ rules. This can be used in conjunction with published blocklist feeds.
   The RPZ_ operation is well described in this `Jan-Piet Mens's post`_,
